--- a/index.html
+++ b/index.html
@@ -8,53 +8,7 @@
 		<title>Letaksjon</title>
 	</head>
 	<body>
-		<div id="sidebar" class="sidebar collapsed" style="color:black;">
-	        <!-- Nav tabs -->
-	        <div class="sidebar-tabs">
-	            <!--ul role="tablist">
-	                <li><a href="#home" role="tab"><i class="fa fa-bars"></i></a></li>
-	                <li><a href="#profile" role="tab"><i class="fa fa-user"></i></a></li>
-	                <li class="disabled"><a href="#messages" role="tab"><i class="fa fa-envelope"></i></a></li>
-	                <li><a href="https://github.com/Turbo87/sidebar-v2" role="tab" target="_blank"><i class="fa fa-github"></i></a></li>
-	            </ul>
-
-	            <ul role="tablist">
-	                <li><a href="#settings" role="tab"><i class="fa fa-gear"></i></a></li>
-	            </ul-->
-	        </div>
-
-	        <!-- Tab panes -->
-	        <div class="sidebar-content">
-	            <div class="sidebar-pane" id="home">
-	                <h1 class="sidebar-header">
-	                    sidebar-v2
-	                    <span class="sidebar-close"><i class="fa fa-caret-left"></i></span>
-	                </h1>
-
-	                <p>A responsive sidebar for mapping libraries like <a href="http://leafletjs.com/">Leaflet</a> or <a href="http://openlayers.org/">OpenLayers</a>.</p>
-
-	                <p class="lorem">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
-
-	                <p class="lorem">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
-
-	                <p class="lorem">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
-
-	                <p class="lorem">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
-	            </div>
-
-	            <div class="sidebar-pane" id="profile">
-	                <h1 class="sidebar-header">Profile<span class="sidebar-close"><i class="fa fa-caret-left"></i></span></h1>
-	            </div>
-
-	            <div class="sidebar-pane" id="messages">
-	                <h1 class="sidebar-header">Messages<span class="sidebar-close"><i class="fa fa-caret-left"></i></span></h1>
-	            </div>
-
-	            <div class="sidebar-pane" id="settings">
-	                <h1 class="sidebar-header">Settings<span class="sidebar-close"><i class="fa fa-caret-left"></i></span></h1>
-	            </div>
-	        </div>
-	    </div>
+	
 		<div id="map" class="sidebar-map"></div>
 
 
@@ -95,7 +49,7 @@
 			    layers: [europa,topo2]
 			},{ zoomcontrol: false });
 
-			var sidebar = L.control.sidebar('sidebar').addTo(map);
+			//var sidebar = L.control.sidebar('sidebar').addTo(map);
 
             function configureMap(){
             	map.zoomControl.remove();
@@ -103,7 +57,7 @@
     			 position:'bottomright'
 				}).addTo(map);
 
-			  	var logo = L.control({position: 'topright'});
+			  	var logo = L.control({position: 'bottomleft'});
 			    logo.onAdd = function(map){
 			        var div = L.DomUtil.create('div', 'myclass');
 			        div.innerHTML= "<div style='margin-left:15px;'><img src='logo.png'width='100' height='100'/><h5>Leteaksjon</h5></div>";
@@ -128,18 +82,19 @@
             	
             	var marker = L.marker(e.latlng).addTo(map);
             	if(!done){
-            		
+
             		showSpinner();
             		setTimeout(function(){
 		            	fetchGeoJsonLayer("plan.json",white);
 		            	fetchGeoJsonLayer("Elv.geojson",water);
 		            	fetchGeoJsonLayer("Hoyde.geojson",danger);
 		            	fetchGeoJsonLayer("Vann.geojson",water);
+		            	fetchGeoJsonLayer("Personer.geojson",water);
 		            	map.setZoom(13);
 		            	done = true;
 		            	$('.loader').hide();
 		            	$('.pnl').effect('slide', { direction: 'right', mode: 'show' }, 500);
-					}, 1500);
+					}, 2000);
             	}
 
 
